Refactor and implement images upload
